# type-parse

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/type_parse/: __init__.py  type_parse.py
tests/: test_type_parse.py
