[project]
name = "type-parse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "1nteger-0verflow", email = "rs.10verflow@gmail.com" },
]
requires-python = ">=3.12,<3.14"
dependencies = []

[build-system]
requires      = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "omegaconf>=2.3.0",
    "pytest>=9.0.2",
]
